# SaveIQ

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml  container-publish.yml
apps/api/: .env.example  .gitignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607100001_initial_foundation.py  202607100002_affiliate_domain_foundation.py  202607100003_affiliate_click_events.py
apps/api/app/: __init__.py  main.py  server.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: admin_affiliate.py  clicks.py  health.py  search.py
apps/api/app/core/: settings.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  affiliate.py
apps/api/app/services/: click_tracking.py  search.py
apps/api/app/services/affiliate/: __init__.py  ingestion.py  mock_provider.py  registry.py  schemas.py
apps/api/app/workers/: __init__.py  placeholder.py  scheduler_tick.py
apps/api/tests/: conftest.py  test_admin_affiliate_api.py  test_affiliate_ingestion.py  test_affiliate_provider.py  test_search_api.py  test_settings.py
apps/web/: .env.example  .gitignore  Dockerfile  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
docs/: AFFILIATE_CONNECTORS.md  AI_SYSTEM.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  GATE_2C_STAGING_VALIDATION.md  PRODUCT.md  ROADMAP.md  SECURITY.md  STAGING_RESOURCE_REGISTER.md
scripts/: gate_2c_validate.py  staging_seed_mock.py  staging_smoke.py  validate_render_blueprint.py
(+22 files in other folders)
